--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,16 +1,9 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+{% block title %}Premium{% endblock %}
+{% block page_content%}
+    <main>
+        <div id="premium-infos" class="center">
+            <h3>Devenez membre premium et accèdez aux avantages suivants :</h3>
 
-        {% block javascripts %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
-</html>
+        </div>
+    </main>
+{% endblock %}
